--- a/api/package.json
+++ b/api/package.json
@@ -28,7 +28,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "pg": "^8.7.1",
-    "sequelize": "^6.12.0-beta.3"
+    "sequelize": "^6.12.0-beta.3",
+    "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.5",
