--- a/.github/workflows/api-validation.yml
+++ b/.github/workflows/api-validation.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./express-postgresql-app
+        working-directory: ./api
     steps:
       - uses: actions/checkout@v2
         
