--- a/.github/workflows/api-validation.yml
+++ b/.github/workflows/api-validation.yml
@@ -18,11 +18,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         
-      - name: Validate deployment template(s)
-        run: |
-          az bicep build --file ./scripts/deployment-rg.bicep
-          az bicep build --file ./scripts/deployment-uat.bicep
-        
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
@@ -35,5 +30,5 @@ jobs:
       - name: Build and validate
         run: npm run build
       
-      #- name: Run unit tests
-      #  run: npm run test
+      - name: Run unit tests
+        run: npm run test
