--- a/.github/workflows/api-ci-cd.yml
+++ b/.github/workflows/api-ci-cd.yml
@@ -15,9 +15,9 @@ jobs:
       run:
         working-directory: ./api
     outputs:
-      RELEASE_VERSION: ${{ steps.get_version_info.outputs.RELEASE_VERSION }}
-      RELEASE_NAME: ${{ steps.get_version_info.outputs.RELEASE_NAME }}    
-      RELEASE_FILE_NAME: ${{ steps.get_version_info.outputs.RELEASE_FILE_NAME }}    
+      RELEASE_VERSION: ${{ steps.version.outputs.RELEASE_VERSION }}
+      RELEASE_NAME: ${{ steps.version.outputs.RELEASE_NAME }}
+      RELEASE_FILE_NAME: ${{ steps.version.outputs.RELEASE_FILE_NAME }}
     env:
       RELEASE_VERSION: "0.0.0"
       RELEASE_NAME: "mini-node-api.zip"
@@ -40,34 +40,28 @@ jobs:
         run: npm install
       
       - name: Generate a unique package version
-        id: get_version_info
+        id: version
         run: |
-          declare releaseOrigVersion=""
-          declare releaseVersion=""
-          declare releaseName=""
-          declare releaseFileName=""
-          
-          releaseOrigVersion=$(cat ./package.json | jq '.version')
-          releaseOrigVersion="${releaseOrigVersion%\"}"
-          releaseOrigVersion="${releaseOrigVersion#\"}"
-          releaseVersion="${releaseOrigVersion}.${{github.run_number}}"
-          
-          cat ./package.json | jq ". |= . + { \"version\": \"${releaseVersion}\" }" > ./package.new.json
-          mv ./package.json ./api/package.old.json
-          mv ./package.new.json ./api/package.json
-          rm ./package.old.json
-          
-          releaseName="mini-node-api-${releaseVersion}"
-          releaseFileName="mini-node-api-${releaseVersion}.zip"
-          
-          echo "RELEASE_VERSION=$releaseVersion" >> $GITHUB_ENV
-          echo "RELEASE_NAME=$releaseName" >> $GITHUB_ENV
-          echo "RELEASE_FILE_NAME=$releaseFileName" >> $GITHUB_ENV
+          VERSION_REPO=$(../scripts/ver/get_version_repo.sh -o martinabrle -r mini-node -p mini-node-api)
+          VERSION_NODE=$(../scripts/ver/get_version_node.sh -f ./package.json)
+          VERSION=""
 
-          echo "::set-output name=RELEASE_VERSION::$releaseVersion"
-          echo "::set-output name=RELEASE_NAME::$releaseName"
-          echo "::set-output name=RELEASE_FILE_NAME::$releaseFileName"
-          
+          RETVAL_VER_COMP=$(../scripts/ver/version_compare.sh "${VERSION_REPO}" "${VERSION_NODE}")
+
+          if [ "$RETVAL_VER_COMP" == 0 ] || [ "$RETVAL_VER_COMP" == 1 ]; then
+              VERSION=$(../scripts/ver/increase_version.sh -v "$VERSION_REPO")
+              ../scripts/ver/update_version_node.sh -f ./package.json -v "$VERSION"
+          elif [ "$RETVAL_VER_COMP" == -1 ]; then
+              VERSION="$VERSION_NODE"
+          else
+              echo "error"
+              exit 1
+          fi
+
+          echo "::set-output name=RELEASE_VERSION::${VERSION}"
+          echo "::set-output name=RELEASE_NAME::mini-node-api-v${VERSION}"
+          echo "::set-output name=RELEASE_FILE_NAME::mini-node-api-v${VERSION}.zip"
+
       - name: Build and validate
         run: npm run build
       
@@ -85,13 +79,13 @@ jobs:
       
       - name: Create an application archive
         run: |
-         zip -r -q -m "${{ env.RELEASE_FILE_NAME }}" .
+         zip -r -q -m "${{ steps.version.outputs.RELEASE_FILE_NAME }}" .
       
       - name: 'Upload build artifact'
         uses: actions/upload-artifact@v2
         with:
-          name: ${{ env.RELEASE_NAME }}
-          path: ./api/${{ env.RELEASE_FILE_NAME }}
+          name: ${{ steps.version.outputs.RELEASE_NAME }}
+          path: ./api/${{ steps.version.outputs.RELEASE_FILE_NAME }}
           retention-days: 5
           
   deploy:
