--- a/.github/workflows/api-ci-cd.yml
+++ b/.github/workflows/api-ci-cd.yml
@@ -6,6 +6,9 @@ on:
   #    - main
   #  paths:
   #    - 'api/**'  
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '30 5,17 * * *'
   workflow_dispatch:
     
 jobs:
